--- a/app/src/main/res/layout/spinner_layout_to.xml
+++ b/app/src/main/res/layout/spinner_layout_to.xml
@@ -3,9 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animationCache="true"
-    android:spinnerMode="dialog"
     android:background="@color/colorPrimary"
-    android:orientation="horizontal">
+    android:gravity="right"
+    android:orientation="horizontal"
+    android:spinnerMode="dialog"
+    android:weightSum="1">
+
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:padding="10dp"
+        android:textAlignment="viewEnd"
+        android:textColorLink="@android:color/background_light"
+        android:textSize="18sp"></TextView>
 
     <ImageView
         android:id="@+id/img"
@@ -14,11 +26,5 @@
         android:layout_gravity="center_vertical"
         android:padding="10dp" />
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:padding="10dp"
-        android:textColorLink="@android:color/background_light"></TextView>
+
 </LinearLayout>
