--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+        <style parent="@android:style/Widget.Spinner" name="SpinnerAsEditText">
+            <item name="android:background">@android:drawable/edit_text</item>
+        </style>
 
 </resources>
