--- a/app/src/main/res/layout/spinner_layout_to.xml
+++ b/app/src/main/res/layout/spinner_layout_to.xml
@@ -16,8 +16,10 @@
         android:layout_gravity="center_vertical"
         android:padding="10dp"
         android:textAlignment="viewEnd"
+        android:textColor="@android:color/black"
         android:textColorLink="@android:color/background_light"
-        android:textSize="18sp"></TextView>
+        android:textSize="24sp"
+        android:textStyle="bold"></TextView>
 
     <ImageView
         android:id="@+id/img"
